@@ -10,6 +10,8 @@
 
 <xsl:template match="program">
 	<xsl:apply-templates select="title"/>
+	<xsl:apply-templates select="seriesTitle"/>
+
 	<xsl:apply-templates select="episodeTitle"/>
 	<xsl:apply-templates select="description"/>
 	<xsl:apply-templates select="vActor"/>
